# TemplateRepoCxx

./: .gitignore  CMakeLists.txt  README.md  format_count.sh
demo1/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
